samples/_failures_safe/1761318873_b48b9a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a38c6ce8.c: In function ‘main’:
./samples/SAFE/__tmp_a38c6ce8.c:132:16: error: expected ‘;’ at end of input
  132 |     init_matrix
      |                ^
      |                ;
./samples/SAFE/__tmp_a38c6ce8.c:132:5: error: expected declaration or statement at end of input
  132 |     init_matrix
      |     ^~~~~~~~~~~
